# math_view

./: .gitignore  CLAUDE.md  FEATURE_PARITY.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
integration_test/: editor_test.dart
ios/: math_view.podspec
lib/: math_view.dart
lib/src/: font_mapping.dart  math_editor.dart  math_view.dart  render_math.dart
lib/src/render/: editable_math_line.dart  math_block_widget.dart  math_leaf.dart  math_line.dart  math_paint.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: editor_api.dart  editor_api.freezed.dart  editor_layout.dart  editor_layout.freezed.dart  math_api.dart  math_api.freezed.dart
linux/: CMakeLists.txt
macos/: math_view.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: editor_api.rs  editor_layout.rs  math_api.rs  mod.rs
rust/src/editor/: arena.rs  command_table.rs  convert.rs  cursor.rs  intent.rs  mod.rs  navigate.rs  node_kind.rs  reduce.rs  serialize.rs  state.rs  tests.rs
test/: edit_sync_test.dart  empty_block_test.dart  flutter_test_config.dart  focus_blur_test.dart  frac_fill_states_test.dart  fraction_cursor_test.dart  nested_frac_test.dart  pm_cursor_test.dart  public_api_test.dart  rapid_typing_test.dart  render_test.dart  selection_test.dart  sqrt_cursor_test.dart  typing_cursor_test.dart
windows/: CMakeLists.txt
(+5 files in other folders)
