[package]
name = "math_view"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { path = "../../flutter-rust-bridge/frb_rust" }
katex-rs = { path = "../../katex-rs/crates/katex", features = ["svg"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
